Fix spacing between form fields

--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -73,7 +73,7 @@ section#account-profile {
 
 .profile-details {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   margin: var(--padding-sm) 0;
 }
 
